--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,13 @@
 <%= render "layouts/stylesheets" %>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/javascripts/markitup/jquery.markitup.js"></script>
 <script type="text/javascript" src="/javascripts/markitup/markitup.init.js"></script>
 <script type="text/javascript" src="/javascripts/markitup/set.js"></script>
+<script type="text/javascript" src="/javascripts/bootstrap-modal.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/markitup/style.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/markitup/skin/style.css" />
-<<<<<<< HEAD
-=======
->>>>>>> 37fe25bf93cd319ad2b9cad3c5a4fa311bff0a4f
+<link rel="stylesheet" type="text/css" href="/stylesheets/jquery-ui-1.8.17.custom.css" />
 </head>
 <body>
 <div class="container">
