--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,23 @@
 			<p>You are not currently enrolled in any paths. <%= link_to "Get started!", paths_path %></p>
 		<% else %>
 		<table class="paths" summary="Users paths">
-			<%= render @paths %>
+			<% @paths.each do |path| %>
+        <% unless path.completed?(current_user) %>
+        <tr>
+          <td style="vertical-align: middle; width: 70px;"><%= image_tag(path.path_pic, :size=>"70x70", :class=> "thumbnail") %>
+          <td class="path">
+            <h3 class="name"><%= link_to path.name, path %></h3>
+            <p class="description"><%= truncate(strip_tags(path.description), :length => 255) %></p>
+            <script>
+              $(function() {$( "#progressbar_<%= path.id %>" ).progressbar({ value: <%= path.percent_complete(current_user) %> }); });
+            </script>
+            <div style="width:300px;">
+            <div id="progressbar_<%= path.id %>" style="height:.8em;"></div>
+            </div>
+          </td>
+        </tr>
+        <% end %>
+      <% end %>
 		</table>
 		<% end %>
 	</section>
