--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,6 +1,20 @@
 <section>
 	<h2><%= @section.name %></h2>
 	<div style="padding: 20px"><%= simple_format(@section.instructions) %></div>
+  <% @info_resources.each do |r| %>
+    <% if r.info_type == "video" %>
+      <% r.link = r.link.gsub("watch?v=", "embed/") %>
+      <div style="margin: 20px 0px 20px 150px;">
+      <iframe width="560" height="315" src="<%= r.link %>" frameborder="0" allowfullscreen></iframe>
+      </div>
+    <% elsif r.info_type == "slideshow" %>
+      <div style="margin: 20px 0px 20px 150px;">
+        <div style="width:425px" id="__ss_1245987"> 
+          <iframe src="http://www.slideshare.net/slideshow/embed_code/1245987" width="600" height="500"></iframe> 
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 	<div class="actions">
     <% if current_user.enrolled?(@section.path) %>
       <% start_mode = @section_started == true ? "Continue" : "Start" %>
