--- a/public/stylesheets/jquery-ui-1.8.17.custom.css
+++ b/public/stylesheets/jquery-ui-1.8.17.custom.css
@@ -58,7 +58,7 @@
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial, sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #DDD; background: whitesmoke; color: #d9d9d9; }
 .ui-widget-content a { color: #d9d9d9; }
-.ui-widget-header { border: 1px solid #0b3e6f; background: #0b3e6f; color: #f6f6f6; font-weight: bold; }
+.ui-widget-header { border: 1px solid #339BB9; background: #339BB9; color: #339BB9; font-weight: bold; }
 .ui-widget-header a { color: #f6f6f6; }
 
 /* Interaction states
@@ -275,12 +275,6 @@
 
 /* Misc visuals
 ----------------------------------*/
-
-/* Corner radius */
-.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -khtml-border-top-left-radius: 4px; border-top-left-radius: 4px; }
-.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -khtml-border-top-right-radius: 4px; border-top-right-radius: 4px; }
-.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -khtml-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; }
-.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; -khtml-border-bottom-right-radius: 4px; border-bottom-right-radius: 4px; }
 
 /* Overlays */
 .ui-widget-overlay { background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); }
