--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="/javascripts/markitup/markitup.init.js"></script>
 <script type="text/javascript" src="/javascripts/markitup/set.js"></script>
 <script type="text/javascript" src="/javascripts/bootstrap-modal.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/markitup/style.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/markitup/skin/style.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/jquery-ui-1.8.17.custom.css" />
