--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -24,7 +24,9 @@
     </div>
   </div>
   <% end %>
-	<div style="float:left; margin: 0px 15px 5px 0px;"><%= image_tag(@path.path_pic, :size=>"50x50") %></div>
+	<div style="float:left; margin: 0px 15px 5px 0px;">
+    <%= image_tag(@path.path_pic, :size=>"100x100") %>
+  </div>
 	<div>
 		<h1>
 			<%= @path.name %>
@@ -46,9 +48,43 @@
         <li>
           <a href="<%= section_link %>" style="opacity: <%= section_opacity %>;">
             <% if s.remaining_tasks(current_user) <= 0 %>
-            <span class="caption">COMPLETED</span>
+            <span class="section-caption">COMPLETED</span>
+            <% elsif s.remaining_tasks(current_user) == s.tasks.size %>
+            <span class="section-caption">LOCKED</span>
+            <% else %>
+            <span class="section-caption">IN PROGRESS</span>
             <% end %>
-            <img class="thumbnail" src="<%= s.pic %>" height="150" width="210" title="<%= s.name %>">
+            <img class="thumbnail" src="<%= s.pic %>" height="150" width="160" title="<%= s.name %>">
+          </a>
+        </li>
+      <% end %>
+      </ul>
+    <% end %>
+  </div>
+  <% unless @achievements.empty? %>
+  <div>
+    <h3>Unlockable Achievements</h3>
+    <ul class="media-grid">
+      <% @achievements.each do |a| %>
+        <li>
+          <a href="<%= achievement_path(a) %>">
+            <img class="thumbnail" src="<%= a.pic %>" height="50" width="50" title="<%= a.name %>">
+          </a>
+        </li>
+      <% end %>
+      </ul>
+  </div>
+  <% end %>
+  <div>
+    <h3>Enrolled Users</h3>
+    <% if @enrolled_users.empty? %>
+    <p>Be the first to enroll in this path!</p>
+    <% else %>
+      <ul class="media-grid">
+      <% @enrolled_users.each do |u| %>
+       <li>
+          <a href="<%= user_path(u) %>">
+            <img class="thumbnail" src="<%= u.profile_pic %>" height="50" width="50" title="<%= u.name %>">
           </a>
         </li>
       <% end %>
@@ -82,8 +118,8 @@
     <% end %>
     
 		<% if current_user.company_admin? %>
-			<%= link_to "Edit", {:controller => "paths", :action => "edit", :id => @path.id }, :class => "btn secondary" %>
-			<%= link_to "Delete", @path, :method => "delete", :confirm => "Are you sure you want to delete this path?", :title => "Delete task", :class => "btn secondary" %>
+				<%= link_to "Delete", @path, :method => "delete", :confirm => "Are you sure you want to delete this path?", :class => "btn secondary", :style=>"float: right;" %>
+        <%= link_to "Edit", {:controller => "paths", :action => "edit", :id => @path.id }, :class => "btn secondary", :style=>"float: right; margin-right: 10px;" %>
 		<% end %>
 		</div>
 	</section>
